# harmonia-project

./: README.md
harmonia/: Cargo.toml
harmonia/src/: .analyser.rs.swp  .input.rs.swp  analyser.rs  comparaison.rs  input.rs  main.rs  notes.rs
harmonia/src/gui/: app.rs  left_panel.rs  mod.rs  right_panel.rs
