[package]
name = "harmonia-project"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.30"
egui = "0.30"
rustfft = "6.2.0"
num-complex = "0.4.3"
cpal = "0.15"
crossbeam-channel = "0.5"
egui_extras = { version = "0.30", features = ["image"] }
image = { version = "0.25", features = ["jpeg", "png"] }
